<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.codeclan.com.rockpaperscissors.MainActivity">

    <TextView
        android:id="@+id/txt_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_instructions_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRockButtonClicked"
        android:text="@string/btn_rock_text"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_paper"
        app:layout_constraintTop_toBottomOf="@+id/txt_instructions"/>

    <Button
        android:id="@+id/btn_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPaperButtonClicked"
        android:text="@string/btn_paper_text"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_instructions"
        app:layout_constraintLeft_toRightOf="@+id/btn_rock"
        app:layout_constraintRight_toLeftOf="@+id/btn_scissors"/>

    <Button
        android:id="@+id/btn_scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onScissorsButtonClicked"
        android:text="@string/btn_scissors_text"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_instructions"
        app:layout_constraintLeft_toRightOf="@+id/btn_paper"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/txt_win_label"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:labelFor="@+id/txt_win_score"
        android:text="@string/txt_win_label"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txt_draw_label"
        app:layout_constraintTop_toBottomOf="@+id/btn_rock"/>

    <TextView
        android:id="@+id/txt_draw_label"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txt_draw_score"
        android:text="@string/txt_draw_label"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_paper"
        app:layout_constraintLeft_toRightOf="@+id/txt_win_label"
        app:layout_constraintRight_toLeftOf="@+id/txt_lose_label"/>

    <TextView
        android:id="@+id/txt_lose_label"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txt_lose_score"
        android:text="@string/txt_lose_label"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_scissors"
        app:layout_constraintLeft_toRightOf="@+id/txt_draw_label"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/txt_win_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_win_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txt_draw_score"/>

    <TextView
        android:id="@+id/txt_draw_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_draw_label"
        app:layout_constraintLeft_toRightOf="@+id/txt_win_score"
        app:layout_constraintRight_toLeftOf="@+id/txt_lose_score"/>

    <TextView
        android:id="@+id/txt_lose_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_lose_label"
        app:layout_constraintLeft_toRightOf="@+id/txt_draw_score"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
